
syntax = "proto2";

package session;

option java_package = "SpaceServer";

message LoginRequest {

}

message LoginResponse {
  required int32 playerId = 1;
  required string playerName = 2;
}

message ChangeNameRequest {
  required string newPlayerName = 1;
}

message ChangeNameSuccess {
  required string newPlayerName = 1;
}

message ChangeNameFailure {
  required string error = 1;
}

message ChangeNameResponse {
  oneof response {
    ChangeNameSuccess success = 1;
    ChangeNameFailure failure = 2;
  }
}
